# Tichu

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
doxygen_doc/: Doxyfile  mainpage.cpp
googletest/: CMakeLists.txt  Makefile  cmake_install.cmake
googletest/lib/docs/: faq.md  gmock_cheat_sheet.md  gmock_cook_book.md  gmock_faq.md  gmock_for_dummies.md  quickstart-bazel.md
googletest/lib/googlemock/: CMakeLists.txt  README.md
googletest/lib/googlemock/src/: gmock.cc
googletest/lib/googletest/: CMakeLists.txt
googletest/lib/googletest/samples/: sample5_unittest.cc
googletest/lib/googletest/src/: gtest-port.cc  gtest.cc
libs/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glfw/: CMakeLists.txt
libs/glfw/src/: mappings.h
libs/glfw/tests/: glfwinfo.c
libs/glm/: manual.md
libs/glm/doc/api/: a00305.html
libs/glm/glm/gtc/: type_ptr.hpp
libs/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_widgets.cpp  imstb_textedit.h  imstb_truetype.h
libs/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_opengl2.cpp  imgui_impl_opengl3.cpp
libs/imgui/misc/freetype/: imgui_freetype.cpp  imgui_freetype.h
libs/json/: ChangeLog.md  README.md
libs/json/docs/mkdocs/docs/api/basic_json/: value_t.md
libs/json/include/nlohmann/: json.hpp
libs/rapidjson/: CHANGELOG.md  CMakeLists.txt
libs/rapidjson/doc/: Doxyfile.in  faq.md  faq.zh-cn.md  pointer.zh-cn.md  sax.md  sax.zh-cn.md
libs/rapidjson/include/rapidjson/: rapidjson.h
libs/sockpp/: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
libs/sockpp/include/sockpp/: stream_socket.h  tcp_acceptor.h
libs/spdlog/include/spdlog/: tweakme.h
libs/spdlog/include/spdlog/fmt/bundled/: ostream.h
libs/spdlog/include/spdlog/sinks/: qt_sinks.h
rapidjson/doc/: Doxyfile.zh-cn.in  pointer.md  stream.md
rapidjson/include/rapidjson/: allocators.h  document.h
scripts/: start_tichu.sh
sockpp/: CHANGELOG.md  CMakeCache.txt  Doxyfile  Makefile  cmake_install.cmake  sockpp.cbp
sockpp/doc/: Doxyfile.cmake
sockpp/include/sockpp/: acceptor.h  connector.h  socket.h
sockpp/src/: Makefile  cmake_install.cmake
src/: game.cpp  game.h
src/client/: GameController.cpp  GameController.h  GamePanel.cpp  GamePanel.h  Tichu.cpp  Tichu.h  game_panel.cpp  game_panel.h  main.cpp  panels.cpp  panels.h  tichu.cpp  tichu.h
src/client/GUI/: Application.cpp  Application.h  KeyCodes.h  gl_utils.cpp  gl_utils.h  imgui_build.cpp  imgui_build.h  renderer.cpp  renderer.h  shader.glsl  window.cpp  window.h
src/client/Renderer/: Application.cpp  Application.h  application.cpp  application.h  font.embed  gl_utils.cpp  gl_utils.h  imgui_build.cpp  imgui_build.h  key_codes.h  renderer.cpp  renderer.h  shader.glsl  window.cpp  window.h
src/client/app/: Lama.cpp  Lama.h  Tichu.cpp  Tichu.h
src/client/network/: ClientNetworkManager.cpp  ClientNetworkManager.h  ClientNetworkThread.cpp  ClientNetworkThread.h  ResponseListenerThread.cpp  ResponseListenerThread.h
src/client/panels/: ConnectionPanel.cpp  ConnectionPanel.h  MainGamePanel.cpp  MainGamePanel.h
src/client/uiElements/: ImagePanel.cpp  ImagePanel.h  InputField.cpp  InputField.h
src/client/windows/: GameWindow.cpp  GameWindow.h
src/common/: Event.cpp  Event.h  Messages.h  event.cpp  event.h  listener.h  logging.h  messages.h  utils.cpp  utils.h
src/common/exceptions/: LamaException.h  TichuException.h
src/common/game_state/: GameState.cpp  GameState.h  game_state.cpp  game_state.h
src/common/game_state/cards/: ActivePile.cpp  ActivePile.h  CardCombination.cpp  CardCombination.h  DrawPile.cpp  DrawPile.h  WonCardsPile.cpp  WonCardsPile.h  active_pile.cpp  active_pile.h  card.cpp  card.h  card_combination.cpp  card_combination.h  discard_pile.cpp  discard_pile.h  draw_pile.cpp  draw_pile.h  won_cards_pile.cpp  won_cards_pile.h
src/common/game_state/player/: Player.cpp  Player.h  hand.cpp  hand.h  player.cpp  player.h  won_cards_pile.cpp  won_cards_pile.h
src/common/network/: ClientMsg.cpp  ClientMsg.h  ServerMsg.cpp  ServerMsg.h  client_msg.cpp  client_msg.h  default.conf  server_msg.cpp  server_msg.h
src/common/serialization/: json_utils.h  reactive_object.cpp  reactive_object.h  serializable.cpp  serializable.h  serializable_value.h  unique_serializable.cpp  unique_serializable.h  uuid_generator.h  value_type_helpers.h  vector_utils.h
src/common/utils/: LamaException.h  global_state.h  json_utils.h  uuid_generator.h
src/game_state/: game_state.cpp  game_state.h
src/game_state/cards/: card.cpp  card.h  discard_pile.cpp  discard_pile.h  draw_pile.cpp  draw_pile.h
src/game_state/player/: hand.cpp  hand.h  player.cpp  player.h
src/network/: server_network_manager.cpp  server_network_manager.h
src/network/requests/: client_request.cpp  client_request.h  draw_card_request.cpp  draw_card_request.h  fold_request.cpp  fold_request.h  join_game_request.cpp  join_game_request.h  leave_game_request.cpp  leave_game_request.h  play_card_request.cpp  play_card_request.h  start_game_request.cpp  start_game_request.h
src/network/responses/: full_state_response.cpp  request_response.cpp  request_response.h  server_response.cpp  server_response.h  state_diff_response.cpp  state_diff_response.h
src/reactive_state/: array_helpers.h  diffable_utils.h  serializable.h  timestamp.h  vector_utils.h
src/reactive_state/diffs/: array_diff.h  array_elem_diff.cpp  array_elem_diff.h  diff.cpp  diff.h  object_diff.cpp  object_diff.h  value_diff.h
src/reactive_state/reactive_objects/: reactive_object.cpp  reactive_object.h  reactive_value.h
src/server/: GameInstance.cpp  GameInstance.h  Server.cpp  Server.h  game_instance.cpp  game_instance.h  game_instance_manager.cpp  game_instance_manager.h  main.cpp  player_manager.cpp  player_manager.h  request_handler.cpp  request_handler.h  server.cpp  server.h  server_network_manager.cpp  server_network_manager.h
unit-tests/: CMakeLists.txt  Makefile  card.cpp  cmake_install.cmake  combi.cpp  hand.cpp  serialization.cpp
(+32 files in other folders)
